# sqlalchemy_alembic_tut

./: README.md  alembic.ini  config.yml  models.py  pyproject.toml
migrations/: env.py
migrations/versions/: bc0d689164e8_create_user_model.py
