[tool.poetry]
name = "sqlalchemy_alembic_tut"
version = "0.1.0"
description = "Set up database using SQLAlchemy and Alembic"
authors = ["Harvey Nguyen <khai.nguyenkhoaquang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
pytest-alembic = "^0.8.4"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
